star bubble alignment fixed

--- a/resources/style.css
+++ b/resources/style.css
@@ -33,7 +33,7 @@ header
 h1 
 {
     color: hsl(300, 43%, 22%);
-    font-size: 2.5rem;
+    font-size: 3rem;
     padding: 1rem 0;
 
 }
@@ -41,7 +41,7 @@ h1
 h2 
 {
     color: hsl(303, 10%, 53%);
-    font-size: 0.8rem;
+    font-size: 0.9rem;
     font-weight: 500;
     width: 90%; 
 }
@@ -71,28 +71,35 @@ section
 {
     background-color:hsl(300, 24%, 96%); 
     display: flex;
-    padding: 1rem 0.5rem;
+    padding: 0.8rem 0.5rem;
     width: 340px;
     border-radius: 7px;
     margin: 1rem auto; 
     font-weight: 700;
     color: hsl(300, 43%, 22%);
-    font-size: 0.8rem;
+    font-size: 0.7rem;
 }
 
 .report
 {
-    margin: 1rem 200px;
+    position: relative;
+    left: 3rem;
 }
 
 .tech 
 {
-    margin: 1rem 260px ;
+    position: relative;
+    left: 6rem;
 }
 
 .stars 
 {
     padding: 0 1rem;
+} 
+
+.stars img 
+{
+    height: 13px;
 }
 
 article
@@ -170,6 +177,11 @@ article p
         padding: 2rem 1rem;    
     }
 
+    h1 
+    {
+        font-size: 2rem;
+    }
+
     h2 
     {
         width: 100%;
@@ -199,11 +211,13 @@ article p
     .report 
     {
         margin: 1rem auto;
+        left: 0;
     }
 
     .tech 
     {
         margin: 1rem auto;
+        left: 0;
     }
 
     .cards 
